2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Video/OverlayOutputFormat.cs, Analog/Video/OverlayCaptureFormat.cs,
	  Analog/Video/OverlayFormat.cs: video overlay support added
	* Analog/Video/VideoFormat.cs, Analog/Video/BaseFormat.cs,
	  Analog/Video/VideoCaptureFormat.cs: refactored constructor inheritance

=== Release 0.3 ===

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* ChangeLog, Core/AssemblyInfo.cs: release 0.3 prepared

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Adapter.cs, Analog/Video/BaseFormat.cs,
	  Analog/Video/FormatContainer.cs, Analog/Video/VideoCaptureFormat.cs,
	  Analog/Video/VideoFormat.cs, Analog/Video/VideoOutputFormat.cs,
	  v4l-net.mdp: refactored format setting system

2007-11-23  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Adapter/Adapter.cs, Analog/Adapter/Capability.cs,
	  Analog/Kernel/v4l2_input.cs, Analog/Kernel/v4l2_tuner.cs,
	  Analog/Kernel/v4l2_frequency.cs, Analog/Audio/Input/Input.cs,
	  Analog/Audio/Input/Capability.cs, Analog/Audio/Output/Output.cs,
	  Analog/Audio/Input.cs, Analog/Audio/Output.cs,
	  Analog/Audio/InputCapability.cs, Analog/Tuner.cs, Analog/TunerType.cs,
	  Analog/Adapter.cs, Analog/Video/Input/Input.cs,
	  Analog/Video/Input/Type.cs, Analog/Video/Input/Status.cs,
	  Analog/Video/FormatContainer.cs, Analog/Video/Output/Output.cs,
	  Analog/Video/Input.cs, Analog/Video/VideoFormat.cs,
	  Analog/Video/Output.cs, Analog/Video/InputType.cs,
	  Analog/Video/InputStatus.cs, Analog/Video/Format/Overlay.cs,
	  Analog/Video/Format/Format.cs, Analog/Video/Format.cs,
	  Analog/Video/OverlayFormat.cs, Analog/AdapterCapability.cs,
	  Analog/TunerAudioMode.cs, Analog/TunerAudioReception.cs,
	  Analog/Tuner/Tuner.cs, Analog/Tuner/Type.cs, Analog/Tuner/AudioMode.cs,
	  Analog/Tuner/AudioReception.cs, Analog/Buffer.cs, v4l-net.mdp: slight
	  namespace refactoring
	* Analog/Video/Format/Container.cs, Analog/Video/Format/Video.cs: new format